<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_profile"
        android:icon="@drawable/ic_save"
        android:orderInCategory="10"
        android:visible="false"
        android:title="@string/action_save_profile" />
    <item
        android:id="@+id/action_view_server_list"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/main_menu_server_list"
        app:showAsAction="never" />

    <item android:id="@+id/action_exempt_app"
        android:title="@string/menu_action_exempt_app"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_connection"
        android:icon="@drawable/connecttest"
        android:orderInCategory="100"
        android:title="@string/action_test_connection"
        app:showAsAction="never|ifRoom" />
    <item
        android:id="@+id/action_show_develop_info_logcat"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_show_develop_info_logcat"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_link"
        android:icon="@drawable/ic_action_link"
        android:visible="false"
        android:title="@string/action_sharelink"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/action_about" />
    <item
    android:id="@+id/action_getID"
    android:orderInCategory="100"
    android:title="@string/action_get_id" />
    <item
        android:id="@+id/action_setIP"
        android:orderInCategory="100"
        android:title="@string/action_set_ip" />
    <item
        android:id="@+id/action_checkUpdate"
        android:orderInCategory="100"
        android:title="@string/action_check_update" />
</menu>