<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_header">

        <Preference
            app:summary="https://github.com/fbenpao/ostrich"
            app:title="@string/project_page" />
        <Preference
            app:summary="Myway"
            app:title="开发者" />
        <Preference
            app:summary="MIT"
            app:title="许可" />
        <Preference
            app:summary="1.0.1"
            app:title="版本" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/credits_header">

<!--        <Preference-->
<!--            app:summary="https://github.com/Dreamacro/clash"-->
<!--            app:title="@string/credit_item1_title" />-->

        <Preference
            app:summary="https://github.com/eycorsican/go-tun2socks"
            app:title="@string/credit_item2_title" />

<!--        <Preference-->
<!--            app:summary="https://github.com/bingoogolapple/BGAQRCode-Android"-->
<!--            app:title="@string/credit_item3_title" />-->

    </PreferenceCategory>

</PreferenceScreen>
